corrected swagger for categories
